--- a/.gitignore
+++ b/.gitignore
@@ -212,4 +212,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-etc/tv-guild-updater.conf
+etc/tv-guide-updater.conf
+etc/playlist.m3u
+etc/xmltv.xml
