--- a/tv_guide_updater/etc/tv-guide-updater.conf.example
+++ b/tv_guide_updater/etc/tv-guide-updater.conf.example
@@ -7,6 +7,7 @@ encryption_key = 00000000
 [device]
 stb_id = 00000000000000000000000000000000
 stb_mac = 00:00:00:00:00:00
+iptv_logical_interface = XXXX
 iptv_interface = eth0
 
 [guide]
