--- a/.gitignore
+++ b/.gitignore
@@ -212,4 +212,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+.idea/deployment.xml
+.idea/misc.xml
+.idea/*.iml
 etc/
